--- a/finance/templates/master_pages/main.html
+++ b/finance/templates/master_pages/main.html
@@ -2,10 +2,48 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Python class</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Finance</title>
+	<link rel="stylesheet" href="/media/css/bootstrap.css">
+	<link rel="stylesheet" href="/media/css/main.css">
 </head>
 <body>
+    <div class="navbar">
+	    <div class="navbar-inner">
+		    <div class="container">
+			    <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
+			    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+				    <span class="icon-bar"></span>
+				    <span class="icon-bar"></span>
+				    <span class="icon-bar"></span>
+			    </a>
+			     
+			    <!-- Be sure to leave the brand out there if you want it shown -->
+			    <a class="brand" href="/">Finance</a>
+			     
+			    <!-- Everything you want hidden at 940px or less, place within here -->
+			    <div class="nav-collapse collapse">
+			        <ul class="nav">
+						<li {% if menu == 'product' %}class="active"{% endif %}><a href="/"><!-- <i class="icon-plus"></i> -->Despesas</a></li>
+						<li {% if menu == 'type' %}class="active"{% endif %}><a href="/type">Tipos</a></li>
+					</ul>
+					<ul class="nav pull-right">
+						<li><a href="#">Logado como: <strong>{{ user.username }}</strong></a></li>
+						<li class="divider-vertical"></li>
+						<li><a href="/logout">Sair</a></li>						
+					</ul>
+			    </div>
+		     
+		    </div>
+	    </div>
+    </div>
+
+	<div class="container">
 	{% block body %}
 	{% endblock %}
+	</div>
+
+	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+	<script src="media/js/bootstrap.js"></script>
 </body>
 </html>
