--- a/finance/templates/product.html
+++ b/finance/templates/product.html
@@ -1,16 +1,30 @@
 {% extends 'master_pages/main.html' %}
 
 {% block body %}
-<a href="/type">Tipos</a><br/>
-<a href="/product/new">Adicionar Despesa</a><br/>
-<a href="/logout">Sair</a><br/>
-<ul>
-	{% for item in items %}
-	<li>
-		{{ item.name }} : {{ item.type.name }} : {{ item.value }} 
-		<a href="/product/{{ item.id }}">Edit</a> || 
-		<a href="/product/delete/{{ item.id }}">Del</a>
-	</li>
-	{% endfor %}
-</ul>
+<div class="row">
+	<div class="span12 clearfix">
+		<a href="#" class="btn btn-info pull-right"><i class="icon-plus icon-white"></i> Adicionar</a>
+	</div>
+</div>
+
+<div class="row">
+	<div class="span12">
+		<ul class="unstyled list">		
+		{% for item in items %}
+			<li>
+				<a href="#" class="btn btn-block clearfix">
+					<span class="pull-left">
+						[ {{ item.type.name }} ] {{ item.name }}
+					</span>
+					<span class="pull-right">
+						R$ {{ item.value }}
+					</span>
+				</a>
+			</li>
+		{% endfor %}
+		</ul>
+		<!-- <a href="/product/{{ item.id }}" class="btn"><i class="icon-edit"></i></a>
+		<a href="/product/delete/{{ item.id }}" class="btn btn-danger"><i class="icon-trash icon-white"></i></a> -->
+	</div>
+</div>
 {% endblock %}
