--- a/finance/templates/login.html
+++ b/finance/templates/login.html
@@ -5,23 +5,30 @@
 	{{ form.non_field_errors }}
 {% endif %}
 
-<form action="." method="post">
-	{% csrf_token %}
-	<table>
-		<tr>
-			<td>{{ form.username.label_tag }}</td>
-			<td>{{ form.username }}</td>
-		</tr>
-		<tr>
-			<td>{{ form.password.label_tag }}</td>
-			<td>{{ form.password }}</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<button type="submit">Login</button>
-			</td>
-		</tr>
-	</table>
-	<input type="hidden" name="next" value="{{ next }}">
-</form>
+<div class="row login">
+	<div class="span4 offset3">
+		<form action="" method="post" class="form-horizontal">
+			{% csrf_token %}
+
+			<div class="control-group">
+				<label class="control-label" for="inputEmail">{{ form.username.label_tag }}</label>
+				<div class="controls">
+					{{ form.username }}
+				</div>
+			</div>
+			<div class="control-group">
+				<label class="control-label" for="inputPassword">{{ form.password.label_tag }}</label>
+				<div class="controls">
+					{{ form.password }}
+				</div>
+			</div>
+			<div class="control-group">
+				<div class="controls">
+					<button type="submit" class="btn btn-primary">Sign in</button>
+					<a href="/sign" class="btn">Novo usuário</a>
+				</div>
+			</div>
+		</form>
+	</div>
+</div>
 {% endblock %}
