--- a/finance/templates/master_pages/main.html
+++ b/finance/templates/master_pages/main.html
@@ -12,7 +12,7 @@
 	    <div class="navbar-inner">
 		    <div class="container">
 			    <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
-			    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+			    <a class="btn btn-navbar {% if not user.is_authenticated %}hide{% endif %}" data-toggle="collapse" data-target=".nav-collapse">
 				    <span class="icon-bar"></span>
 				    <span class="icon-bar"></span>
 				    <span class="icon-bar"></span>
@@ -22,7 +22,7 @@
 			    <a class="brand" href="/">Finance</a>
 			     
 			    <!-- Everything you want hidden at 940px or less, place within here -->
-			    <div class="nav-collapse collapse">
+			    <div class="nav-collapse collapse {% if not user.is_authenticated %}hide{% endif %}">
 			        <ul class="nav">
 						<li {% if menu == 'product' %}class="active"{% endif %}><a href="/"><!-- <i class="icon-plus"></i> -->Despesas</a></li>
 						<li {% if menu == 'type' %}class="active"{% endif %}><a href="/type">Tipos</a></li>
@@ -44,6 +44,9 @@
 	</div>
 
 	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-	<script src="media/js/bootstrap.js"></script>
+	<script src="/media/js/bootstrap.js"></script>
+	<script src="/media/js/main.js"></script>
+	{% block script %}
+	{% endblock %}
 </body>
 </html>
