--- a/finance/templates/product_item.html
+++ b/finance/templates/product_item.html
@@ -1,9 +1,25 @@
 {% extends 'master_pages/main.html' %}
 
 {% block body %}
-<form action="" method="post">
-	{% csrf_token %}
-	{{ form.as_p }}
-	<button type="submit">Adicionar</button>
-</form>
+<div class="row">
+	<div class="span12">
+		<div class="page-header">
+			<h1>{% if edit %}Editar{% else %}Nova{% endif %} Despesa</h1>
+		</div>
+
+		<form action="" method="post" name="product">
+			{% csrf_token %}
+			{{ form.as_p }}
+			<button class="btn" type="submit">Adicionar</button>
+		</form>
+	</div>
+</div>
+{% endblock %}
+
+{% block script %}
+<script type="text/javascript">
+	$(function(){
+		product();
+	});
+</script>
 {% endblock %}
