--- a/finance/media/css/main.css
+++ b/finance/media/css/main.css
@@ -21,7 +21,9 @@ ul.list li a span {
 }
 
 ul.list li a span.item {
-	margin-top: 3px;
+	margin-bottom: 3px;
+	border: 1px solid #ededed;
+	padding: 2px 10px;
 }
 
 ul.list li a span strong {
