--- a/finance/media/css/main.css
+++ b/finance/media/css/main.css
@@ -1,6 +1,6 @@
 a { outline: none !important; }
 .hide { display: none !important; }
-strong.success, span.success { color: green; }
+
 .ar { text-align: right; }
 
 .login {
@@ -25,14 +25,15 @@ ul.list li a span.item {
 }
 
 ul.list li a span.value {
-	border: 1px solid #ededed;
-	padding: 2px 10px;
-	background-color: #fff;
+	border-top: 1px solid #ccc;
+}
+
+ul.list li a.btn-success span.value {
+	border-top: 1px solid #fff;
 }
 
 ul.list li a span.value i {
-	font-style: normal;
-	color: #666666;
+	
 }
 
 ul.list li a span strong {
