--- a/finance/media/css/main.css
+++ b/finance/media/css/main.css
@@ -24,6 +24,10 @@ ul.list li a span.item {
 	margin-bottom: 3px;
 }
 
+ul.list li a span.item p {
+	margin: 0;
+}
+
 ul.list li a span.value {
 	border-top: 1px solid #ccc;
 }
@@ -33,7 +37,8 @@ ul.list li a.btn-success span.value {
 }
 
 ul.list li a span.value i {
-	
+	color: #000;
+	font-size: 13px;
 }
 
 ul.list li a span strong {
