--- a/finance/templates/type.html
+++ b/finance/templates/type.html
@@ -3,7 +3,7 @@
 {% block body %}
 <div class="row">
 	<div class="span12 clearfix">
-		<a href="/type/new" class="btn btn-info pull-right"><i class="icon-plus icon-white"></i> Adicionar</a>
+		<a href="/type/new" class="btn btn-info pull-right"><i class="icon-plus icon-white"></i></a>
 	</div>
 </div>
 
