--- a/finance/templates/product.html
+++ b/finance/templates/product.html
@@ -4,10 +4,9 @@
 <div class="row">
 	<div class="span12 clearfix">
 		<div class="btn-group">
-			<button class="btn disabled" disabled="disabled"><i class="icon-th-list"></i></button>
-			<button class="btn active">Data</button>
-			<button class="btn">Pago</button>
-			<button class="btn">Não pago</button>
+			<a href="/" class="btn {% if options == Null %}active{% endif %}">Data</a>
+			<a href="/product/paid" class="btn {% if options == 'paid' %}active{% endif %}">Pago</a>
+			<a href="/product/nonpaid" class="btn {% if options == 'nonpaid' %}active{% endif %}">Não pago</a>
 		</div>
 		<a href="/product/new" class="btn btn-info pull-right"><i class="icon-plus icon-white"></i></a>
 	</div>
@@ -18,14 +17,14 @@
 		<ul class="unstyled list">		
 		{% for item in items %}
 			<li>
-				<a href="#" class="btn btn-block clearfix {% if item.status == 1 %}btn-success{% endif %}" data-original-title="" data-content="<a href='#' class='btn {% if item.status == 1 %}btn-success disabled{% else %}btn-info{% endif %}' rel='status' data-status='1' data-product-id='{{ item.id }}'><i class='icon-ok icon-white'></i></a> <a href='/product/{{ item.id }}' class='btn' title='Editar'><i class='icon-pencil'></i></a> <a href='/product/delete/{{ item.id }}' class='btn btn-danger' title='Deletar'><i class='icon-remove icon-white'></i></a>" data-html="true" data-placement="bottom" data-toggle="popover">
+				<a href="#{{ item.id }}" class="btn btn-block clearfix {% if item.paid %}btn-success{% endif %}" data-original-title="" data-content="<a href='#' class='btn {% if item.paid == 1 %}btn-success disabled{% else %}btn-info{% endif %}' rel='status' data-status='1' data-product-id='{{ item.id }}'><i class='icon-ok icon-white'></i></a> <a href='/product/{{ item.id }}' class='btn' title='Editar'><i class='icon-pencil'></i></a> <a href='/product/delete/{{ item.id }}' class='btn btn-danger' title='Deletar'><i class='icon-remove icon-white'></i></a>" data-html="true" data-placement="bottom" data-toggle="popover">
 					<span class="item clearfix">
 						<p class="pull-left">{{ item.name }}</p>
-						<strong class="pull-right {% if item.status == 1 %}success{% endif %}">{{ item.number_formated }}</strong>
+						<strong class="pull-right {% if item.paid == 1 %}success{% endif %}">{{ item.number_formated }}</strong>
 					</span>
 					<span class="value clearfix hide">
 						<i class="pull-left">{{ item.type.name }}</i>
-						<i class="pull-right">{{ item.date }}</i>
+						<i class="pull-right">Dia {{ item.date.day }}</i>
 					</span>
 				</a>
 			</li>
