--- a/finance/templates/product.html
+++ b/finance/templates/product.html
@@ -30,6 +30,9 @@
 			</li>
 		{% endfor %}
 		</ul>
+		<div class="total">
+			<p class="ar">TOTAL <span>R$ {{ total }}</span></p>
+		</div>
 	</div>
 </div>
 {% endblock %}
